# HiveGateBackend

./: .env  .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250607_142640_create_users_table.rs  m20250607_143909_update_users_table.rs  m20250710_093513_add_details_to_users.rs  m20250710_225049_update_user_details.rs
src/: main.rs
src/entities/: user.rs
src/routes/: mod.rs
src/routes/auth/: login.rs  mod.rs  signup.rs
src/routes/users/: get_all_users.rs  mod.rs
src/routes/ws/: mod.rs
